menyelesaikan api notifikasi
